# KillerGK

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
cmake/: KillerGKConfig.cmake.in
examples/: CMakeLists.txt
examples/basic/: main.cpp
include/KillerGK/: KillerGK.hpp
include/KillerGK/animation/: Animation.hpp
include/KillerGK/core/: Application.hpp  Error.hpp  Types.hpp  Window.hpp
include/KillerGK/kgk2d/: KGK2D.hpp
include/KillerGK/kgk3d/: KGK3D.hpp
include/KillerGK/kgkaudio/: KGKAudio.hpp
include/KillerGK/kgkmedia/: KGKMedia.hpp
include/KillerGK/kgknet/: KGKNet.hpp
include/KillerGK/layout/: Layout.hpp
include/KillerGK/platform/: Input.hpp  LinuxPlatform.hpp  MacOSPlatform.hpp  OSIntegration.hpp  Platform.hpp  WindowsPlatform.hpp
include/KillerGK/rendering/: Renderer.hpp  Renderer2D.hpp  ShaderSystem.hpp  Texture.hpp  TextureAtlas.hpp  VisualEffects.hpp  VulkanBackend.hpp
include/KillerGK/resources/: ResourceManager.hpp
include/KillerGK/text/: BiDi.hpp  Font.hpp  IconFont.hpp  RichText.hpp  SyntaxHighlighter.hpp  TextRenderer.hpp
include/KillerGK/theme/: Theme.hpp
include/KillerGK/widgets/: Button.hpp  Chart.hpp  ComboBox.hpp  DataGrid.hpp  Image.hpp  Label.hpp  Menu.hpp  TabControl.hpp  TextField.hpp  TreeView.hpp  Widget.hpp
src/animation/: Animation.cpp
src/core/: Error.cpp  Types.cpp
src/kgk2d/: KGK2D.cpp
src/kgk3d/: KGK3D.cpp
src/kgkaudio/: KGKAudio.cpp
src/kgkmedia/: KGKMedia.cpp
src/kgknet/: KGKNet.cpp
src/layout/: Layout.cpp
src/platform/: Input.cpp  LinuxPlatform.cpp  MacOSPlatform.cpp  OSIntegration.cpp  OSIntegrationLinux.cpp  OSIntegrationMacOS.cpp  OSIntegrationWindows.cpp  Platform.cpp  WindowsPlatform.cpp
src/rendering/: Renderer.cpp  Renderer2D.cpp  ShaderSystem.cpp  Texture.cpp  TextureAtlas.cpp  VisualEffects.cpp  VulkanBackend.cpp
src/resources/: ResourceManager.cpp
src/text/: BiDi.cpp  Font.cpp  IconFont.cpp  RichText.cpp  SyntaxHighlighter.cpp  TextRenderer.cpp
src/theme/: Theme.cpp
src/widgets/: Button.cpp  Chart.cpp  ComboBox.cpp  DataGrid.cpp  Image.cpp  Label.cpp  Menu.cpp  TabControl.cpp  TextField.cpp  TreeView.cpp  Widget.cpp
tests/: CMakeLists.txt  test_helpers.hpp
tests/cli/: CMakeLists.txt  test_cli_properties.cpp
tests/core/: test_types.cpp
tests/properties/: test_properties.cpp
tests/resources/: test_resource_caching.cpp
tools/kgk-cli/: CMakeLists.txt  main.cpp
